updated card body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,16 @@ body {
     color: var(--darkblue);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 700;
+}
+
+.custom-jumbotron {
+    background-color: var(--darkblue);
+    color: var(--light);
+}
