added new read-me

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,5 +58,10 @@ thead {
 
 .custom-table tbody {
     background-color: var(--darkblue);
+    color: var(--light);
 }
 
+
+.delete-project-btn {
+    cursor: pointer;
+}
